<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TektanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_jur1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bgtektan"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tv_jur1"
                    android:layout_centerInParent="true"
                    android:textAllCaps="true"
                    android:textColor="#131312"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_jur1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAllCaps="true"
                    android:textColor="#131312"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp"
                    android:text="VISI"
                    android:layout_below="@+id/iv_jur1"/>
                <TextView
                    android:id="@+id/tv_vsi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_jur1"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/tv_jur2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_vsi1"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="MISI"
                    android:textAllCaps="true"
                    android:textColor="#131312"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_vsi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_jur2"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:justificationMode="inter_word" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/tektan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card1">
            <TextView
                android:id="@+id/tv_prodi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="~ PROGRAM STUDI ~"
                android:textAllCaps="true"
                android:textColor="#131312"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card3"
            android:layout_below="@id/tektan1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ppa" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himatiseri"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card4"
            android:layout_below="@id/card3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/tsl" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan2"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Hima TSL"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card5"
            android:layout_below="@id/card4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/mp" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan3"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himameta"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card6"
            android:layout_below="@id/card5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/tepa" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan4"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himatepa"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card7"
            android:layout_below="@id/card5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi5"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/tepa" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan4"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi5a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himatepa"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card8"
            android:layout_below="@id/card7"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi6"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/trki" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan5"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi6a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himatekin"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card9"
            android:layout_below="@id/card8"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi7"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/trkjj" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan6"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi7a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himatran"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card10"
            android:layout_below="@id/card9"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi8"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ppa" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/tektan7"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi8a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himgro"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>