<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KebunActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_jur1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bgkebun"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tv_jur1"
                    android:layout_centerInParent="true"
                    android:textAllCaps="true"
                    android:textColor="#131312"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_jur1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAllCaps="true"
                    android:textColor="#131312"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp"
                    android:text="VISI"
                    android:layout_below="@+id/iv_jur1"/>

                <TextView
                    android:id="@+id/tv_vsi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_jur1"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_jur2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_vsi1"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="MISI"
                    android:textAllCaps="true"
                    android:textColor="#131312"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_vsi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_jur2"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:justificationMode="inter_word"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/kebun1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card1">
            <TextView
                android:id="@+id/tv_prodi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="~ PROGRAM STUDI ~"
                android:textAllCaps="true"
                android:textColor="#131312"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card3"
            android:layout_below="@id/kebun1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/kebun" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/kebun1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himabun"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card4"
            android:layout_below="@id/card3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/kebun" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/kebun2"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himabun"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card5"
            android:layout_below="@id/card4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/lgoprodi3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/kebun" />
            </LinearLayout>

            <TextView
                android:id="@+id/nmprodi3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="80dp"
                android:text="@string/kebun3"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nmprodi3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:paddingLeft="80dp"
                android:text="Himabun"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>